# ML

./: README.md
ann/: CMakeLists.txt  ann.cpp  ann.hpp  common.hpp  layer.cpp  layer.hpp  main.cpp  node.cpp  node.hpp
ann_ln/: CMakeLists.txt  ann.cpp  ann.hpp  main.cpp
backprop/: main.cpp
